--- a/DOM/ButtonHoverEffect/index.html
+++ b/DOM/ButtonHoverEffect/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
     <div id="main">
-       <div id="cards"></div>
-       
+        <a href="#">Something Fishy!</a>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
