--- a/DOM/ButtonStyling/index.html
+++ b/DOM/ButtonStyling/index.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <div id="main">
-       <div id="cards"></div>
-       
+        <a href="#">
+            <span>Button</span>
+            <div class="liquid"></div>
+        </a>
     </div>
-    <script src="script.js"></script>
+
 </body>
 </html>
